referential_tests/src/failing/circular_indirect.stderr
error: lifetime may not live long enough
 --> src/failing/circular_indirect.rs:7:1
  |
7 | #[referential('a)]
  | ^^^^^^^^^^^^^^--^^
  | |             |
  | |             lifetime `'a` defined here
  | returning this value requires that `'a` must outlive `'static`
  |
  = note: requirement occurs because of the type `CircularIndirect<'_>`, which makes the generic argument `'_` invariant
  = note: the struct `CircularIndirect<'a>` is invariant over the parameter `'a`
  = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
  = note: this error originates in the attribute macro `referential` (in Nightly builds, run with -Z macro-backtrace for more info)
